sumo/tests/traci/VariableRetrieval/Edge/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 170: Unsupported variable specified
